--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -7,7 +7,9 @@
     <%= f.input :quantity %>
     <%= f.input :description %>
     <%= f.association :brand %>
-    <%= f.association :category %>
+
+
+    <%= f.input :avatar, as: :file %>
   </div>
 
   <div class="form-actions">
