--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -5,7 +5,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Name</th>
+      <th colspan="2">Product</th>
       <th>Current price</th>
       <th>Quantity</th>
       <th>Description</th>
@@ -18,6 +18,7 @@
   <tbody>
     <% @products.each do |product| %>
       <tr>
+        <td><%= image_tag product.avatar.url(:thumb) %></td>
         <td><%= product.name %></td>
         <td><%= product.current_price %></td>
         <td><%= product.quantity %></td>
