--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -30,5 +30,11 @@
   <%= @product.category.try(:name) %>
 </p>
 
+
+<p>
+<%= image_tag @product.avatar.url(:medium) %>
+</p>
+
+
 <%= link_to 'Edit', edit_admin_product_path(@product) %> |
 <%= link_to 'Back', admin_products_path %>
