--- a/app/views/admin/brands/_form.html.erb
+++ b/app/views/admin/brands/_form.html.erb
@@ -8,4 +8,6 @@
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
+
+  <%= link_to 'New Brand', new_admin_brand_path, class: "btn btn-primary btn-block" %>
 <% end %>
