--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -20,7 +20,7 @@
       <tr>
         <td><%= image_tag product.avatar.url(:thumb) %></td>
         <td><%= product.name %></td>
-        <td><%= product.current_price %></td>
+        <td><%= number_to_currency product.current_price %></td>
         <td><%= product.quantity %></td>
         <td><%= product.description %></td>
         <td><%= product.brand.try(:name) %></td>
