--- a/app/views/storefront/index.html.erb
+++ b/app/views/storefront/index.html.erb
@@ -1,5 +1,11 @@
-<h1>Welcome to Mardi Paws</h1>
-<p>Dress your pup like everyday is Mardi Gras</p>
+<h1>Welcome to Mardi Paws!</h1>
+<p>Dress your pup like every day is Mardi Gras.</p>
+
+<% if params[:category_id] %>
+<h3>All <%= @category.name.titleize %></h3>
+<% else %>
+<h3>All Products</h3>
+<% end %>
 
 <div class="row">
   <% @products.each do |product| %>
@@ -14,10 +20,10 @@
           <h5><%= product.name %></h5>
 
           <span class="pull-right">
-          <%# TODO: Make live when we have carts model  %>
+            <%# TODO: Make live when we have carts model %>
             <button class="btn btn-primary btn-xs">Add to Cart</button>
           </span>
-         <a href="#" data-toggle="modal" data-target="#product_<%= product.id %>">
+          <a href="#" data-toggle="modal" data-target="#product_<%= product.id %>">
             <small>quick info</small>
           </a>
 
@@ -26,24 +32,31 @@
     </div>
 
     <!-- Modal -->
-<div class="modal fade" id="product_<%= product.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-      </div>
-      <div class="modal-body">
-      <%= image_tag product.avatar.url(:medium), class: "img-responsive img-rounded" %>
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    <div class="modal fade" id="product_<%= product.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel"><%= product.name %></h4>
+          </div>
+          <div class="modal-body">
 
-        <button type="button" class="btn btn-primary">Save changes</button>
+            <div class="row">
+              <div class="col-sm-8">
+                <%= image_tag product.avatar.url(:medium), class: "img-responsive img-rounded" %>
+              </div>
+              <div class="col-sm-4">
+                <p><%= product.description %></p>
+                <h5><%= number_to_currency product.current_price %></h5>
+                <%# TODO: Make live when we have carts model %>
+                <button type="button" class="btn btn-primary">Add to Cart</button>
+              </div>
+            </div>
+
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
+
   <% end %>
 </div>
