--- a/app/views/admin/brands/index.html.erb
+++ b/app/views/admin/brands/index.html.erb
@@ -2,7 +2,8 @@
 
 <h1>Brands</h1>
 
-<table class="table">
+
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -24,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New Brand', new_admin_brand_path, class: "btn btn-default" %>
+<%= link_to 'New Brand', new_admin_brand_path, class: "btn btn-primary" %>
