--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,7 +1,7 @@
 
 <h1>Categories</h1>
 
-<table class="table">
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -23,4 +23,4 @@
 
 <br>
 
-<%= link_to 'New Category', new_admin_category_path %>
+<%= link_to 'New Category', new_admin_category_path, class: "btn btn-primary" %>
