--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Products</h1>
 
-<table class="table">
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th colspan="2">Product</th>
@@ -35,4 +35,5 @@
 
 <br>
 
-<%= link_to 'New Product', new_admin_product_path %>
+<%= link_to 'New Product', new_admin_product_path, class: "btn btn-primary" %>
+
