--- a/app/views/layouts/_navbar_links.html.erb
+++ b/app/views/layouts/_navbar_links.html.erb
@@ -15,6 +15,10 @@
 </ul>
 
 <ul class="nav navbar-nav navbar-right">
+
+  <% if session[:cart_id] %>
+    <li><%= link_to fa_icon("shopping-cart", text: "Cart"), edit_cart_path %></li>
+  <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
           <ul class="dropdown-menu">
