--- a/app/views/carts/edit.html.erb
+++ b/app/views/carts/edit.html.erb
@@ -1,29 +1,8 @@
 <h1>Your Shopping Cart</h1>
-<table class="table table-striped table-hover">
-<thread>
-<tr>
-<th>Products</th>
-<th>Quantity</th>
-<th>Unit Price</th>
-<th>Total Price</th>
-</tr>
-</thread>
-<tbody>
-  <% @cart.line_items.each do |item| %>
-  <tr>
-    <td><%= image_tag item.product.avatar.url(:thumb), class: "img-responsive img-thumbnail" %></td>
-    <td><%= item.product.name %></td>
-    <td><%= item.quantity %></td>
-    <td><%= number_to_currency item.price %></td>
-    <td><%= number_to_currency item.total %></td>
-  </tr>
 
-<% end %>
-</tbody>
+<%= render @cart %>
 
-</table>
-
-<h3>Order Subtotal: <%= number_to_currency @cart.subtotal %></h3>
+<%= link_to fa_icon("money", text: "Checkout"), new_order_path, class: "btn btn-primary" %>
 
 <%= link_to "Continue Shopping", shop_path, class: "btn btn-success" %>
 
