--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -7,6 +7,7 @@
     <%= f.input :quantity, input_html: {min: 0} %>
     <%= f.input :description %>
     <%= f.association :brand %>
+    <%= f.association :category %>
 
 
     <%= f.input :avatar, as: :file %>
