--- a/app/views/layouts/_navbar_links.html.erb
+++ b/app/views/layouts/_navbar_links.html.erb
@@ -19,6 +19,7 @@
   <% if session[:cart_id] %>
     <li><%= link_to fa_icon("shopping-cart", text: "Cart"), edit_cart_path %></li>
   <% end %>
+        <% if user_signed_in? && current_user.admin %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -27,6 +28,7 @@
             <li><%= link_to "Products", admin_products_path %></li>
           </ul>
           </li>
+          <% end %>
 
           <% if user_signed_in? %>
           <li><%= link_to fa_icon('gear', text:'Account'), edit_user_registration_path %></li>
